tests/ui/skip/duplicate_setters_1.stderr
error: encountered duplicate `#[skip(setters)]` attribute for field
 --> tests/ui/skip/duplicate_setters_1.rs:5:24
  |
5 |     #[skip(setters)] #[skip(setters)]
  |                        ^^^^

error: duplicate `#[skip(setters)]` here
 --> tests/ui/skip/duplicate_setters_1.rs:5:7
  |
5 |     #[skip(setters)] #[skip(setters)]
  |       ^^^^
